Revert "Merge branch 'main' into clarify-aas-source-url"
This reverts commit 6334d849b7d0d94159c18cebc89a526813b14c97, reversing
changes made to 526d6b3fcbd84e846c691f4baca4d55e2d84a27d.